# Minecraft-clone

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  run_coverage.sh  run_tests.sh  sonar-project.properties
.github/workflows/: tests-and-coverage.yml
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  env.cmake  gcc.cmake  gl3.cmake  glm.cmake
cmake/src/: Makefile  cmake_install.cmake
lib/pmdreader/: bitmap.cpp
lib/pmdreader/mmd/util/: dwarf.inl  dwarf_impl.inl
lib/utgraphicsutil/: debuggl.cc
src/: PerlinNoise.hpp  README.md  config.h  gui.cc  gui.h  main.cc  procedure_geometry.cc  procedure_geometry.h
src/shaders/: cloud.frag  default.geom  default.vert  floor.frag  satelite.frag  satelite.vert
tests/: CMakeLists.txt  bitmap_test.cpp  debuggl_test.cpp  gui_test.cpp
tests/stubs/: debuggl.h  jpegio.h
tests/stubs/GL/: glew.h
tests/stubs/GLFW/: glfw3.h  glfw3_extended.h
